# GameOfLifeSFML

./: CMakeLists.txt  README.md  main.cpp
src/: Cell.cpp  Cell.h  Game.cpp  Game.h  Grid.cpp  Grid.h
